--- a/client/public/index.html
+++ b/client/public/index.html
@@ -33,7 +33,17 @@
     />
 
     <title>PolkaBridge Launchpad</title>
-    
+     <!-- Global site tag (gtag.js) - Google Analytics -->
+     <script async src="https://www.googletagmanager.com/gtag/js?id=G-NWGE5SKJNV"></script>
+     <script>
+       window.dataLayer = window.dataLayer || [];
+       function gtag() {
+         dataLayer.push(arguments);
+       }
+       gtag('js', new Date());
+ 
+       gtag('config', 'G-NWGE5SKJNV');
+     </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
