--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,10 +11,16 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!-- <link
-      href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Noto+Sans:wght@400;700&family=Reem+Kufi&family=Roboto+Mono:wght@400;700&display=swap"
-      rel="stylesheet"
-    /> -->
+    <link
+    href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css"
+    rel="stylesheet"
+  />
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+    crossorigin="anonymous"
+  />
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap" rel="stylesheet">
     <meta property="og:type" content="website">
     <meta property="og:title" content="PolkaBridge Launchpad">
@@ -49,15 +55,5 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
   
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
