Add switch network in metamask from UI

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,59 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Multi-chain liquidity protocol for emerging token projects with no seed investment, founder’s fees, or pre-mining" />
-    <!--
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description"
+    content="Multi-chain liquidity protocol for emerging token projects with no seed investment, founder’s fees, or pre-mining" />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link
-    href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css"
-    rel="stylesheet"
-  />
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
-    crossorigin="anonymous"
-  />
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="PolkaBridge Launchpad">
-    <meta property="og:description" content="PolkaBridge Deflationary Farming | Polkadot DEX | CrossChain DEX | LaunchPad">
-    <meta property="og:image:height" content="512">
-    <meta property="og:image:width" content="512">
-    <meta property="og:image:type" content="image/png">
-    <meta
-      name="twitter:description"
-      content="olkaBridge Launchpad"
-    />
-    <meta name="twitter:card" content="summary" />
-    <meta
-      name="twitter:title"
-      content="PolkaBridge Launchpad"
-    />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="PolkaBridge Launchpad">
+  <meta property="og:description"
+    content="PolkaBridge Deflationary Farming | Polkadot DEX | CrossChain DEX | LaunchPad">
+  <meta property="og:image:height" content="512">
+  <meta property="og:image:width" content="512">
+  <meta property="og:image:type" content="image/png">
+  <meta name="twitter:description" content="olkaBridge Launchpad" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="PolkaBridge Launchpad" />
 
-    <title>PolkaBridge Launchpad</title>
-     <!-- Global site tag (gtag.js) - Google Analytics -->
-     <script async src="https://www.googletagmanager.com/gtag/js?id=G-NWGE5SKJNV"></script>
-     <script>
-       window.dataLayer = window.dataLayer || [];
-       function gtag() {
-         dataLayer.push(arguments);
-       }
-       gtag('js', new Date());
- 
-       gtag('config', 'G-NWGE5SKJNV');
-     </script>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-  
-    <div id="root"></div>
-  </body>
+  <title>PolkaBridge Launchpad</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NWGE5SKJNV"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-NWGE5SKJNV');
+  </script>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+
+  <div id="root"></div>
+</body>
+
 </html>
