--- a/client/public/index.html
+++ b/client/public/index.html
@@ -34,6 +34,8 @@
   <title>PolkaBridge Launchpad</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-NWGE5SKJNV"></script>
+  <script src="https://www.google.com/recaptcha/api.js"></script>
+
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() {
