Fix captcha verification

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,14 +27,15 @@
   <meta property="og:image:height" content="512">
   <meta property="og:image:width" content="512">
   <meta property="og:image:type" content="image/png">
-  <meta name="twitter:description" content="olkaBridge Launchpad" />
+  <meta name="twitter:description" content="PolkaBridge Launchpad" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="PolkaBridge Launchpad" />
 
   <title>PolkaBridge Launchpad</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-NWGE5SKJNV"></script>
-  <script src="https://www.google.com/recaptcha/api.js"></script>
+
+  <script crossorigin="anonymous" src="https://www.recaptcha.net/recaptcha/api.js"></script>
 
   <script>
     window.dataLayer = window.dataLayer || [];
